--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.11.0",
-    "nuxt": "^2.0.0",
+    "@nuxtjs/firebase": "^7.5.0",
+    "firebase": "^8.3.2",
+    "nuxt": "^2.15.3",
     "nuxt-composition-api": "^0.9.0",
     "vue-core-video-player": "^0.1.9"
   },
