--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.11.0",
+    "@nuxtjs/composition-api": "0.23.4",
     "@nuxtjs/firebase": "^7.5.0",
     "firebase": "^8.3.2",
     "nuxt": "^2.15.3",
@@ -21,10 +22,15 @@
     "vue-core-video-player": "^0.1.9"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.16",
+    "@babel/preset-env": "^7.13.15",
     "@nuxtjs/tailwindcss": "^1.0.0",
-    "@vue/test-utils": "^1.0.0-beta.27",
-    "babel-jest": "^24.1.0",
-    "jest": "^24.1.0",
-    "vue-jest": "^4.0.0-beta.3"
+    "@vue/compiler-sfc": "^3.0.11",
+    "@vue/test-utils": "^1.1.4",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "typescript": "^4.2.4",
+    "vue-jest": "^3.0.7"
   }
 }
