--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Olamide Okunola",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt --hostname '0' --port 3000",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
