Promises based data

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,11 @@ assets/videos/-MsOgnU97kohUH0OcuY2.mp4
 assets/videos/-MsOgUXUuDj846yxAjH4.mp4
 assets/videos/-MsOi6gtFeOYpMSz7HyF.mp4
 assets/videos/-MsOiOOVO8l-mSFUrWp7.mp4
+firebase-export-1641633004263CvqKZv/storage_export/blobs/vba-sensei.appspot.com/lessonvideos/-MsOiOOVO8l-mSFUrWp7.mp4
+firebase-export-1641633004263CvqKZv/storage_export/blobs/vba-sensei.appspot.com/lessonvideos/-MsOgnU97kohUH0OcuY2.mp4
+firebase-export-1641633004263CvqKZv/storage_export/blobs/vba-sensei.appspot.com/lessonvideos/-MsOi6gtFeOYpMSz7HyF.mp4
+firebase-export-1641633004263CvqKZv/auth_export/accounts.json
+firebase-export-1641633004263CvqKZv/auth_export/config.json
+firebase-export-1641633004263CvqKZv/database_export/vba-sensei-default-rtdb.json
+firebase-export-1641633004263CvqKZv/storage_export/buckets.json
+firebase-export-1641633004263CvqKZv/storage_export/blobs/vba-sensei.appspot.com/lessonvideos%2F
