--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,44 @@ sw.*
 
 # Vim swap files
 *.swp
+emu/firebase-export-metadata.json
+emu/auth_export/accounts.json
+emu/auth_export/config.json
+emu/database_export/vba-sensei-default-rtdb.json
+emu/storage_export/buckets.json
+emu/storage_export/blobs/vba-sensei.appspot.com/icons%2F
+emu/storage_export/blobs/vba-sensei.appspot.com/images%2F
+emu/storage_export/blobs/vba-sensei.appspot.com/lessonvideos%2F
+emu/storage_export/blobs/vba-sensei.appspot.com/icons/nav%2F
+emu/storage_export/blobs/vba-sensei.appspot.com/icons/views%2F
+emu/storage_export/blobs/vba-sensei.appspot.com/icons/nav/hamburger.svg
+emu/storage_export/blobs/vba-sensei.appspot.com/icons/views/completed-state.svg
+emu/storage_export/blobs/vba-sensei.appspot.com/icons/views/in-progress-state.svg
+emu/storage_export/blobs/vba-sensei.appspot.com/icons/views/pending-state.svg
+emu/storage_export/blobs/vba-sensei.appspot.com/images/placeholder-profile-1.png
+emu/storage_export/blobs/vba-sensei.appspot.com/lessonvideos/-MsOgnU97kohUH0OcuY2.mp4
+emu/storage_export/blobs/vba-sensei.appspot.com/lessonvideos/-MsOgUXUuDj846yxAjH4.mp4
+emu/storage_export/blobs/vba-sensei.appspot.com/lessonvideos/-MsOi6gtFeOYpMSz7HyF.mp4
+emu/storage_export/blobs/vba-sensei.appspot.com/lessonvideos/-MsOiOOVO8l-mSFUrWp7.mp4
+emu/storage_export/metadata/vba-sensei.appspot.com/icons%2F.json
+emu/storage_export/metadata/vba-sensei.appspot.com/images%2F.json
+emu/storage_export/metadata/vba-sensei.appspot.com/lessonvideos%2F.json
+emu/storage_export/metadata/vba-sensei.appspot.com/icons/nav%2F.json
+emu/storage_export/metadata/vba-sensei.appspot.com/icons/views%2F.json
+emu/storage_export/metadata/vba-sensei.appspot.com/icons/nav/hamburger.svg.json
+emu/storage_export/metadata/vba-sensei.appspot.com/icons/views/completed-state.svg.json
+emu/storage_export/metadata/vba-sensei.appspot.com/icons/views/in-progress-state.svg.json
+emu/storage_export/metadata/vba-sensei.appspot.com/icons/views/pending-state.svg.json
+emu/storage_export/metadata/vba-sensei.appspot.com/images/placeholder-profile-1.png.json
+emu/storage_export/metadata/vba-sensei.appspot.com/lessonvideos/-MsOgnU97kohUH0OcuY2.mp4.json
+emu/storage_export/metadata/vba-sensei.appspot.com/lessonvideos/-MsOgUXUuDj846yxAjH4.mp4.json
+emu/storage_export/metadata/vba-sensei.appspot.com/lessonvideos/-MsOi6gtFeOYpMSz7HyF.mp4.json
+emu/storage_export/metadata/vba-sensei.appspot.com/lessonvideos/-MsOiOOVO8l-mSFUrWp7.mp4.json
+firebase-export-1641633004263CvqKZv/auth_export/accounts.json
+firebase-export-1641633004263CvqKZv/auth_export/config.json
+firebase-export-1641633004263CvqKZv/database_export/vba-sensei-default-rtdb.json
+firebase-export-1641633004263CvqKZv/storage_export/buckets.json
+firebase-export-1641633004263CvqKZv/storage_export/blobs/vba-sensei.appspot.com/lessonvideos%2F
+firebase-export-1641633004263CvqKZv/storage_export/blobs/vba-sensei.appspot.com/lessonvideos/-MsOgnU97kohUH0OcuY2.mp4
+firebase-export-1641633004263CvqKZv/storage_export/blobs/vba-sensei.appspot.com/lessonvideos/-MsOi6gtFeOYpMSz7HyF.mp4
+firebase-export-1641633004263CvqKZv/storage_export/blobs/vba-sensei.appspot.com/lessonvideos/-MsOiOOVO8l-mSFUrWp7.mp4
